--- a/src/main/resources/css/FilePanel/FilePanelUI.css
+++ b/src/main/resources/css/FilePanel/FilePanelUI.css
@@ -23,3 +23,9 @@
     -fx-background-color: #bbbbbb;
     -fx-text-fill: #000000;
 }
+
+.group-text{
+    -fx-text-fill: gray;
+    -fx-font-family: Arial;
+    -fx-font-size: 16;
+}
