--- a/src/main/resources/css/GraphCanvas/tab_pane.css
+++ b/src/main/resources/css/GraphCanvas/tab_pane.css
@@ -9,8 +9,10 @@
     -fx-tab-max-height: 25px;
 
     -fx-background-color: #FFFFFF;
-    -fx-border-color: #333333;
+    -fx-border-color: gray;
     -fx-border-width: 1.5;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, 10);
+
     -fx-shape: "M5,0
     A 10,10 90 0 0 0,5 L0,235
     A 10,10 90 0 0 5,240 L235,240
