--- a/src/main/resources/css/InputKeyboard/button.css
+++ b/src/main/resources/css/InputKeyboard/button.css
@@ -3,16 +3,18 @@
 	-fx-border-radius: 5;
 }
 .function-button{
-	-fx-background-color: #BBBBBB;
+	-fx-background-color: #D2D2D2;
 	
-	-fx-font-family: "Arial";
-	-fx-font-size: 16;
-	
+	-fx-font-family: Arial;
+	-fx-font-size: 20;
+
 }
 .function-button:hover{
-	-fx-background-color: #888888;
+	-fx-background-color: #C6C6C6;
 }
-
+.function-button:pressed{
+	-fx-background-color: #BFBFBF;
+}
 .important-button{
 	-fx-background-color: #28a3f4;
 	-fx-font-weight: bold;
@@ -22,31 +24,30 @@
 	-fx-background-color: #a4d7ff;
 }
 .number-button{
-	-fx-pref-width: 80;
+	-fx-pref-width: 70;
 	-fx-background-color: #FFFFFF;
-	-fx-border-width: 0.5;
-	-fx-border-color: #111111;
-	
-	-fx-font-family: "Cambria Math";
-	-fx-font-size: 14;
+    -fx-background-radius: 5;
+
+	-fx-font-family: Arial;
+	-fx-font-size: 20;
 }
 .number-button:hover{
 	-fx-background-color: #BBBBBB;
 }
 .letter-button{
-	-fx-pref-width: 85;
+	-fx-pref-width: 70;
 	-fx-background-color: #FFFFFF;
-	-fx-border-width: 0.5;
-	-fx-border-color: #111111;
-	
-	-fx-font-family: "Arial";
-	-fx-font-size: 14;
+	-fx-border-width: 5;
+	-fx-background-radius: 5;
+
+    -fx-font-family: Arial;
+    -fx-font-size: 20;
 }
 .letter-button:hover{
 	-fx-background-color: #BBBBBB;
 }
 .space-button{
-	-fx-pref-width: 309;
+	-fx-pref-width: 250;
 }
 .math-button{
 	-fx-pref-height: 35;
