--- a/src/main/resources/fxml/GraphList/GraphBlockUI.fxml
+++ b/src/main/resources/fxml/GraphList/GraphBlockUI.fxml
@@ -5,30 +5,42 @@
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="50.0" minHeight="50.0" prefHeight="60.0" prefWidth="273.0" style="-fx-background-color: transparent; -fx-border-color: lightgray; -fx-border-width: 0.5; -fx-border-radius: 5;" styleClass="border-section" stylesheets="@../../css/GraphList/GraphList.css" type="HBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="50.0" minHeight="50.0" prefHeight="60.0" prefWidth="273.0" styleClass="graph-block" stylesheets="@../../css/GraphList/GraphList.css" type="HBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <AnchorPane maxWidth="60.0" minWidth="60.0" prefWidth="60.0" HBox.hgrow="ALWAYS">
+        <AnchorPane styleClass="anchor-pane" HBox.hgrow="ALWAYS">
             <children>
                 <Label fx:id="orderLabel" style="-fx-font-family: Arial; -fx-font-size: 14;" text="1." AnchorPane.leftAnchor="2.0" AnchorPane.topAnchor="2.0">
                <font>
                   <Font name="Arial" size="12.0" />
                </font></Label>
-                <Circle fx:id="colorAndActive" fill="DODGERBLUE" radius="15" stroke="rgba(0, 0, 0, 0.3)" strokeType="INSIDE" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0" />
+                <Circle fx:id="colorAndActive" fill="DODGERBLUE" radius="15" stroke="rgba(0, 0, 0, 0.3)" strokeType="INSIDE" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0" />
+            <HBox fx:id="errorPane" alignment="CENTER" style="-fx-background-color: white; -fx-background-radius: 5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <Label fx:id="warningLabel" contentDisplay="GRAPHIC_ONLY">
+                     <graphic>
+                        <ImageView fx:id="warningImg" fitHeight="36.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/warningTri.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Label>
+               </children>
+            </HBox>
             </children>
          <HBox.margin>
             <Insets />
          </HBox.margin>
-         <padding>
-            <Insets bottom="10.0" />
-         </padding>
         </AnchorPane>
-        <StackPane alignment="CENTER_RIGHT" style="-fx-border-color: gray; -fx-border-width: 0 0 0 0.5;" styleClass="text-field-section">
+        <StackPane alignment="CENTER_RIGHT" styleClass="text-field-section">
             <children>
                 <TextField fx:id="expressionTextField" prefWidth="240.0" promptText="Enter expression..." style="-fx-background-color: transparent; -fx-border-color: transparent; -fx-font-family: Arial; -fx-font-size: 16;" StackPane.alignment="CENTER_RIGHT" />
                 <MenuButton alignment="CENTER_RIGHT" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" styleClass="add-button">
