--- a/src/main/resources/fxml/InputKeyboard/InputKeyboardUI.fxml
+++ b/src/main/resources/fxml/InputKeyboard/InputKeyboardUI.fxml
@@ -466,9 +466,9 @@
 				</HBox>
 				<HBox alignment="CENTER" spacing="3.0">
 					<children>
-						<Button mnemonicParsing="false" onMousePressed="#switchNormalLetterToCappedLetterKeyBoard" text="Up">
+						<Button mnemonicParsing="false" onMousePressed="#switchNormalLetterToCappedLetterKeyBoard" prefWidth="100.0" text="Up">
 							<HBox.margin>
-								<Insets right="55.0" />
+								<Insets right="50.0" />
 							</HBox.margin>
 							<styleClass>
 								<String fx:value="normal-button" />
@@ -520,9 +520,9 @@
 								<String fx:value="letter-button" />
 							</styleClass>
 						</Button>
-						<Button mnemonicParsing="false" onMousePressed="#deleteButtonPressing" text="Delete">
+						<Button mnemonicParsing="false" onMousePressed="#deleteButtonPressing" prefWidth="100.0" text="Delete">
 							<HBox.margin>
-								<Insets left="55.0" />
+								<Insets left="50.0" />
 							</HBox.margin>
 							<styleClass>
 								<String fx:value="normal-button" />
@@ -539,7 +539,7 @@
 				</HBox>
 				<HBox alignment="CENTER" spacing="3.0">
 					<children>
-						<Button mnemonicParsing="false" onMousePressed="#switchNoramlLetterToNumberKeyBoard" text="Number">
+						<Button mnemonicParsing="false" onMousePressed="#switchNoramlLetterToNumberKeyBoard" prefWidth="70.0" text="123">
 							<HBox.margin>
 								<Insets left="5.0" right="10.0" />
 							</HBox.margin>
@@ -588,7 +588,7 @@
 								<String fx:value="letter-button" />
 							</styleClass>
 						</Button>
-						<Button mnemonicParsing="false" prefWidth="110.0" text="Enter">
+						<Button mnemonicParsing="false" prefWidth="120.0" text="Enter">
 							<HBox.margin>
 								<Insets />
 							</HBox.margin>
@@ -740,9 +740,9 @@
 				</HBox>
 				<HBox alignment="CENTER" spacing="3.0">
 					<children>
-						<Button mnemonicParsing="false" onMousePressed="#switchCappedLetterToNormalLetterKeyBoard" text="Down">
+						<Button mnemonicParsing="false" onMousePressed="#switchCappedLetterToNormalLetterKeyBoard" prefWidth="100.0" text="Down">
 							<HBox.margin>
-								<Insets right="55.0" />
+								<Insets right="50.0" />
 							</HBox.margin>
 							<styleClass>
 								<String fx:value="normal-button" />
@@ -794,9 +794,9 @@
 								<String fx:value="letter-button" />
 							</styleClass>
 						</Button>
-						<Button mnemonicParsing="false" onMousePressed="#deleteButtonPressing" text="Delete">
+						<Button mnemonicParsing="false" onMousePressed="#deleteButtonPressing" prefWidth="100.0" text="Delete">
 							<HBox.margin>
-								<Insets left="55.0" />
+								<Insets left="50.0" />
 							</HBox.margin>
 							<styleClass>
 								<String fx:value="normal-button" />
@@ -813,7 +813,7 @@
 				</HBox>
 				<HBox alignment="CENTER" spacing="3.0">
 					<children>
-						<Button mnemonicParsing="false" onMousePressed="#switchCappedLetterToNumberKeyBoard" text="Number">
+						<Button mnemonicParsing="false" onMousePressed="#switchCappedLetterToNumberKeyBoard" prefWidth="70.0" text="123">
 							<HBox.margin>
 								<Insets left="5.0" right="10.0" />
 							</HBox.margin>
@@ -862,7 +862,7 @@
 								<String fx:value="letter-button" />
 							</styleClass>
 						</Button>
-						<Button mnemonicParsing="false" prefWidth="110.0" text="Enter">
+						<Button mnemonicParsing="false" prefWidth="120.0" text="Enter">
 							<styleClass>
 								<String fx:value="normal-button" />
 								<String fx:value="function-button" />
